--- a/build.gradle
+++ b/build.gradle
@@ -47,9 +47,13 @@ dependencies {
     implementation 'com.graphql-java:graphql-java-spring-boot-starter-webmvc:1.0' // NEW
     implementation 'com.google.guava:guava:26.0-jre' // NEW
     implementation 'org.springframework.boot:spring-boot-starter-web'
-
     compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'com.h2database:h2'
+
+    //compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.1")
+    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.1'
+
+    runtimeOnly 'com.h2database:h2' //H2
+    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client' // 2020.04.09 / mariaDB / mosj
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
