--- a/build.gradle
+++ b/build.gradle
@@ -23,33 +23,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    //implementation 'com.graphql-java-kickstart:graphql-spring-boot-starter:6.0.1'
-    //implementation 'com.graphql-java:graphql-java-tools:6.0.1'
 
-    /*compile 'com.graphql-java-kickstart:graphql-spring-boot-starter:6.0.1'
-    // to embed Altair tool
-    runtime 'com.graphql-java-kickstart:altair-spring-boot-starter:6.0.1'
-    // to embed GraphiQL tool
-    runtime 'com.graphql-java-kickstart:graphiql-spring-boot-starter:6.0.1'
-    // to embed Voyager tool
-    runtime 'com.graphql-java-kickstart:voyager-spring-boot-starter:6.0.1'
-    // testing facilities
-    testCompile 'com.graphql-java-kickstart:graphql-spring-boot-starter-test:6.0.1'*/
-
-/*
-    compile 'com.graphql-java-kickstart:graphql-spring-boot-starter:5.2'
-    compile 'com.graphql-java-kickstart:graphiql-spring-boot-starter:5.2'
-    compile 'com.graphql-java-kickstart:voyager-spring-boot-starter:5.2'
-    testCompile 'com.graphql-java-kickstart:graphql-spring-boot-starter-test:5.2'*/
-
-
+    // Graph QL
     implementation 'com.graphql-java:graphql-java:11.0' // NEW
     implementation 'com.graphql-java:graphql-java-spring-boot-starter-webmvc:1.0' // NEW
     implementation 'com.google.guava:guava:26.0-jre' // NEW
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
 
-    //compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.1")
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.1'
 
     runtimeOnly 'com.h2database:h2' //H2
