--- a/build.gradle
+++ b/build.gradle
@@ -31,10 +31,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
 
+    // Data Base
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.1'
-
     runtimeOnly 'com.h2database:h2' //H2
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client' // 2020.04.09 / mariaDB / mosj
+
+    // lombok
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
