--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "node-sass": "^4.13.1",
+    "sass-loader": "7.3.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.2"
@@ -96,7 +98,6 @@
     "last 2 versions",
     "not ie <= 8"
   ],
-
   "prettier": {
     "tabWidth": 2
   }
