--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.19.0",
     "node-sass": "^4.13.1",
     "sass-loader": "7.3.1",
+    "sass-resources-loader": "^2.0.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.2"
