--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
+    "stylelint": "stylelint --fix '**/*.scss'",
     "build": "node build/build.js"
   },
   "dependencies": {
@@ -18,6 +19,10 @@
     "node-sass": "^4.13.1",
     "sass-loader": "7.3.1",
     "sass-resources-loader": "^2.0.2",
+    "stylelint": "^13.3.2",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-order": "^4.0.0",
+    "stylelint-scss": "^3.17.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.2"
