--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,13 @@
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
-    "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
+    "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs --fix",
     "stylelint": "stylelint --fix '**/*.scss'",
     "build": "node build/build.js"
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "lint-staged": "^10.1.3",
     "node-sass": "^4.13.1",
     "sass-loader": "7.3.1",
     "sass-resources-loader": "^2.0.2",
@@ -58,6 +59,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "husky": "^4.2.5",
     "inject-loader": "^3.0.0",
     "karma": "^1.4.1",
     "karma-coverage": "^1.1.1",
@@ -106,5 +108,17 @@
   ],
   "prettier": {
     "tabWidth": 2
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,vue,scss}": [
+      "yarn stylelint",
+      "yarn lint",
+      "git add"
+    ]
   }
 }
