--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "axios": "^0.19.0",
     "lint-staged": "^10.1.3",
+    "lodash": "^4.17.15",
+    "lodash.debounce": "^4.0.8",
     "node-sass": "^4.13.1",
     "sass-loader": "7.3.1",
     "sass-resources-loader": "^2.0.2",
