--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,9 @@
   "dependencies": {
     "axios": "^0.19.0",
     "lint-staged": "^10.1.3",
-    "lodash": "^4.17.15",
-    "lodash.debounce": "^4.0.8",
     "node-sass": "^4.13.1",
     "sass-loader": "7.3.1",
-    "sass-resources-loader": "^2.0.2",
+    "sass-resources-loader": "2.0.2",
     "stylelint": "^13.3.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.0.0",
@@ -45,7 +43,7 @@
     "babel-register": "^6.22.0",
     "chai": "^4.1.2",
     "chalk": "^2.0.1",
-    "chromedriver": "^2.27.2",
+    "chromedriver": "^81.0.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.1",
     "cross-spawn": "^5.0.1",
@@ -91,7 +89,7 @@
     "sinon-chai": "^2.8.0",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
-    "vue-loader": "^13.3.0",
+    "vue-loader": "13.7.3",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
