--- a/frontend/package.json
+++ b/frontend/package.json
@@ -109,7 +109,8 @@
     "not ie <= 8"
   ],
   "prettier": {
-    "tabWidth": 2
+    "tabWidth": 2,
+    "singleQuote": true
   },
   "husky": {
     "hooks": {
