김지윤 / NA / NA / git ignore 수정 및 Json to Map Util 추가

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,4 +1,5 @@
 .DS_Store
+../.gradle
 node_modules/
 /dist/
 npm-debug.log*
@@ -7,7 +8,6 @@ yarn-error.log*
 /test/unit/coverage/
 /test/e2e/reports/
 selenium-debug.log
-
 # Editor directories and files
 .idea
 .vscode
