--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,15 +15,22 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.21",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "axios": "^0.19.0",
     "lint-staged": "^10.1.3",
     "node-sass": "^4.14.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "sass-loader": "7.3.1",
     "sass-resources-loader": "2.0.2",
     "stylelint": "^13.3.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.0.0",
     "stylelint-scss": "^3.17.0",
+    "typescript": "^4.1.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.2"
